Missed models after model fix
