# ufit_api_flask/openapi_server/controllers/lookup_controller.py
@@ -1,7 +1,7 @@
 import connexion
 import six
 
-from openapi_server.models.exercise import Exercise  # noqa: E501
+from openapi_server.models.action_set import ActionSet  # noqa: E501
 from openapi_server import util
 
 
@@ -13,6 +13,6 @@ def find_exercises_by_tags(tags):  # noqa: E501
     :param tags: 
     :type tags: str
 
-    :rtype: Exercise
+    :rtype: ActionSet
     """
     return 'do some magic!'
