# ufit_api_flask/openapi_server/models/__init__.py
@@ -3,6 +3,13 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from openapi_server.models.basic_action import BasicAction
+from openapi_server.models.action import Action
+from openapi_server.models.action_result import ActionResult
+from openapi_server.models.action_result_type import ActionResultType
+from openapi_server.models.action_set import ActionSet
 from openapi_server.models.exercise import Exercise
+from openapi_server.models.gender import Gender
+from openapi_server.models.kpi import KPI
+from openapi_server.models.progress_item import ProgressItem
+from openapi_server.models.state import State
 from openapi_server.models.user import User
