# ufit_api_flask/openapi_server/models/action_result.py
@@ -1,0 +1,94 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model_ import Model
+from openapi_server.models.action_result_type import ActionResultType
+from openapi_server.models.progress_item import ProgressItem
+from openapi_server import util
+
+from openapi_server.models.action_result_type import ActionResultType  # noqa: E501
+from openapi_server.models.progress_item import ProgressItem  # noqa: E501
+
+class ActionResult(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, result=None, progress=None):  # noqa: E501
+        """ActionResult - a model defined in OpenAPI
+
+        :param result: The result of this ActionResult.  # noqa: E501
+        :type result: ActionResultType
+        :param progress: The progress of this ActionResult.  # noqa: E501
+        :type progress: List[ProgressItem]
+        """
+        self.openapi_types = {
+            'result': ActionResultType,
+            'progress': List[ProgressItem]
+        }
+
+        self.attribute_map = {
+            'result': 'result',
+            'progress': 'progress'
+        }
+
+        self._result = result
+        self._progress = progress
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'ActionResult':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The ActionResult of this ActionResult.  # noqa: E501
+        :rtype: ActionResult
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def result(self):
+        """Gets the result of this ActionResult.
+
+
+        :return: The result of this ActionResult.
+        :rtype: ActionResultType
+        """
+        return self._result
+
+    @result.setter
+    def result(self, result):
+        """Sets the result of this ActionResult.
+
+
+        :param result: The result of this ActionResult.
+        :type result: ActionResultType
+        """
+
+        self._result = result
+
+    @property
+    def progress(self):
+        """Gets the progress of this ActionResult.
+
+
+        :return: The progress of this ActionResult.
+        :rtype: List[ProgressItem]
+        """
+        return self._progress
+
+    @progress.setter
+    def progress(self, progress):
+        """Sets the progress of this ActionResult.
+
+
+        :param progress: The progress of this ActionResult.
+        :type progress: List[ProgressItem]
+        """
+
+        self._progress = progress
