# ufit_api_flask/openapi_server/models/action_result_type.py
@@ -1,0 +1,44 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model_ import Model
+from openapi_server import util
+
+
+class ActionResultType(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    """
+    allowed enum values
+    """
+    SUCCESS = "success"
+    FAILURE = "failure"
+    NOT_ATTEMPTED = "not_attempted"
+
+    def __init__(self):  # noqa: E501
+        """ActionResultType - a model defined in OpenAPI
+
+        """
+        self.openapi_types = {
+        }
+
+        self.attribute_map = {
+        }
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'ActionResultType':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The ActionResultType of this ActionResultType.  # noqa: E501
+        :rtype: ActionResultType
+        """
+        return util.deserialize_model(dikt, cls)
