# ufit_api_flask/openapi_server/models/action_set.py
@@ -1,0 +1,118 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model_ import Model
+from openapi_server.models.action import Action
+from openapi_server import util
+
+from openapi_server.models.action import Action  # noqa: E501
+
+class ActionSet(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, id=None, name=None, steps=None):  # noqa: E501
+        """ActionSet - a model defined in OpenAPI
+
+        :param id: The id of this ActionSet.  # noqa: E501
+        :type id: int
+        :param name: The name of this ActionSet.  # noqa: E501
+        :type name: str
+        :param steps: The steps of this ActionSet.  # noqa: E501
+        :type steps: List[Action]
+        """
+        self.openapi_types = {
+            'id': int,
+            'name': str,
+            'steps': List[Action]
+        }
+
+        self.attribute_map = {
+            'id': 'id',
+            'name': 'name',
+            'steps': 'steps'
+        }
+
+        self._id = id
+        self._name = name
+        self._steps = steps
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'ActionSet':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The ActionSet of this ActionSet.  # noqa: E501
+        :rtype: ActionSet
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def id(self):
+        """Gets the id of this ActionSet.
+
+
+        :return: The id of this ActionSet.
+        :rtype: int
+        """
+        return self._id
+
+    @id.setter
+    def id(self, id):
+        """Sets the id of this ActionSet.
+
+
+        :param id: The id of this ActionSet.
+        :type id: int
+        """
+
+        self._id = id
+
+    @property
+    def name(self):
+        """Gets the name of this ActionSet.
+
+
+        :return: The name of this ActionSet.
+        :rtype: str
+        """
+        return self._name
+
+    @name.setter
+    def name(self, name):
+        """Sets the name of this ActionSet.
+
+
+        :param name: The name of this ActionSet.
+        :type name: str
+        """
+
+        self._name = name
+
+    @property
+    def steps(self):
+        """Gets the steps of this ActionSet.
+
+
+        :return: The steps of this ActionSet.
+        :rtype: List[Action]
+        """
+        return self._steps
+
+    @steps.setter
+    def steps(self, steps):
+        """Sets the steps of this ActionSet.
+
+
+        :param steps: The steps of this ActionSet.
+        :type steps: List[Action]
+        """
+
+        self._steps = steps
