# ufit_api_flask/openapi_server/models/exercise.py
@@ -6,10 +6,12 @@ from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
 from openapi_server.models.base_model_ import Model
-from openapi_server.models.basic_action import BasicAction
+from openapi_server.models.action_set import ActionSet
+from openapi_server.models.progress_item import ProgressItem
 from openapi_server import util
 
-from openapi_server.models.basic_action import BasicAction  # noqa: E501
+from openapi_server.models.action_set import ActionSet  # noqa: E501
+from openapi_server.models.progress_item import ProgressItem  # noqa: E501
 
 class Exercise(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -17,31 +19,26 @@ class Exercise(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, id=None, name=None, steps=None):  # noqa: E501
+    def __init__(self, actions=None, goals=None):  # noqa: E501
         """Exercise - a model defined in OpenAPI
 
-        :param id: The id of this Exercise.  # noqa: E501
-        :type id: int
-        :param name: The name of this Exercise.  # noqa: E501
-        :type name: str
-        :param steps: The steps of this Exercise.  # noqa: E501
-        :type steps: List[BasicAction]
+        :param actions: The actions of this Exercise.  # noqa: E501
+        :type actions: ActionSet
+        :param goals: The goals of this Exercise.  # noqa: E501
+        :type goals: List[ProgressItem]
         """
         self.openapi_types = {
-            'id': int,
-            'name': str,
-            'steps': List[BasicAction]
+            'actions': ActionSet,
+            'goals': List[ProgressItem]
         }
 
         self.attribute_map = {
-            'id': 'id',
-            'name': 'name',
-            'steps': 'steps'
+            'actions': 'actions',
+            'goals': 'goals'
         }
 
-        self._id = id
-        self._name = name
-        self._steps = steps
+        self._actions = actions
+        self._goals = goals
 
     @classmethod
     def from_dict(cls, dikt) -> 'Exercise':
@@ -55,64 +52,43 @@ class Exercise(Model):
         return util.deserialize_model(dikt, cls)
 
     @property
-    def id(self):
-        """Gets the id of this Exercise.
+    def actions(self):
+        """Gets the actions of this Exercise.
 
 
-        :return: The id of this Exercise.
-        :rtype: int
+        :return: The actions of this Exercise.
+        :rtype: ActionSet
         """
-        return self._id
+        return self._actions
 
-    @id.setter
-    def id(self, id):
-        """Sets the id of this Exercise.
+    @actions.setter
+    def actions(self, actions):
+        """Sets the actions of this Exercise.
 
 
-        :param id: The id of this Exercise.
-        :type id: int
+        :param actions: The actions of this Exercise.
+        :type actions: ActionSet
         """
 
-        self._id = id
+        self._actions = actions
 
     @property
-    def name(self):
-        """Gets the name of this Exercise.
+    def goals(self):
+        """Gets the goals of this Exercise.
 
 
-        :return: The name of this Exercise.
-        :rtype: str
+        :return: The goals of this Exercise.
+        :rtype: List[ProgressItem]
         """
-        return self._name
+        return self._goals
 
-    @name.setter
-    def name(self, name):
-        """Sets the name of this Exercise.
-
-
-        :param name: The name of this Exercise.
-        :type name: str
-        """
-
-        self._name = name
-
-    @property
-    def steps(self):
-        """Gets the steps of this Exercise.
+    @goals.setter
+    def goals(self, goals):
+        """Sets the goals of this Exercise.
 
 
-        :return: The steps of this Exercise.
-        :rtype: List[BasicAction]
-        """
-        return self._steps
-
-    @steps.setter
-    def steps(self, steps):
-        """Sets the steps of this Exercise.
-
-
-        :param steps: The steps of this Exercise.
-        :type steps: List[BasicAction]
+        :param goals: The goals of this Exercise.
+        :type goals: List[ProgressItem]
         """
 
-        self._steps = steps
+        self._goals = goals
